# nanoGPT

./: .gitignore  bench.py  model.py  pyproject.toml  sample.py  train.py  train_gpt.py  train_split_gpt.py
config/: train_gelu-2l-mod_shakespeare-char.py  train_gelu-2l-split_shakespeare-char.py  train_gelu-2l.py  train_gelu-2l_shakespeare-char.py
data/shakespeare_char/: compute_bigrams.py
data/tinystories/: prepare.py
nanogpt/: model.py  nn.py
nanogpt/model/: __init__.py  gpt.py  model.py  split_gpt.py
nanogpt/utils/: checkpoint.py
notebooks/: compute_c4_bigrams.py  inspect_c4_bigrams.py  logit_lens.py  viz_logit_lens.py
scripts/: check_split_gpt_recovers_gpt.sh  sanity_check_split_arch.sh  sweep_coefficients.py  sweep_coefficients.sh  sweep_coefficients_tinystories.sh
tests/: test_nn.py
tests/model/: test_gpt.py  test_split_gpt.py
